--- a/package.json
+++ b/package.json
@@ -9,18 +9,32 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.35.0",
+    "@prisma/client": "^6.19.0",
+    "axios": "^1.13.2",
+    "cloudinary": "^2.8.0",
+    "dayjs": "^1.11.19",
+    "filesize": "^11.0.13",
+    "lucide-react": "^0.554.0",
+    "next": "16.0.1",
+    "next-cloudinary": "^6.17.5",
+    "plyr": "^3.8.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.1"
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20.19.25",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "daisyui": "^5.5.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1"
+    "eslint-config-next": "16.0.1",
+    "prisma": "^6.19.0",
+    "tailwindcss": "^4",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
